# cpp20-module-example

./: CMakeLists.txt  cpp20modules.cmake  english.cpp  german.cpp  helloworld.cpp  main.cpp  mathTemplate.cpp  readme.md  spanish.cpp
